优化终端3和优化资源管理器
1.解决打开终端输入第一条命令时tree /f时，输出内容显示不全且滚动条无法自动滑动到底部的问题
2.解决资源管理器文件命名冲突问题
现存一个bug，输入一条命令后点击历史输出区域时，滚动条会自动上拉到最顶端，经过多番尝试无法解决，但只要在演示时，输入命令后，稍微滑动滚轮，就能解决滚动条自动上拉至最顶端的问题